Change display to flex to prevent overflow

--- a/client/src/features/overview-dashboard/components/OverviewDashboard.module.css
+++ b/client/src/features/overview-dashboard/components/OverviewDashboard.module.css
@@ -1,8 +1,7 @@
 .container {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
-  /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
-  /* justify-content: center; */
 }
 
 .statistics {
